--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "workshopper-wrappedexec",
-  "version": "0.1.2",
+  "name": "@timothygu/workshopper-wrappedexec",
+  "version": "0.1.5",
   "description": "A utility to wrap a Workshopper exercise execution for fancy hackery",
   "main": "./wrappedexec.js",
   "author": "Rod Vagg <rod@vagg.org> (https://github.com/rvagg)",
   "repository": {
     "type": "git",
-    "url": "https://github.com/rvagg/workshopper-wrappedexec.git"
+    "url": "https://github.com/TimothyGu/workshopper-wrappedexec.git"
   },
   "license": "MIT",
   "dependencies": {
